--- a/WEEK1.html
+++ b/WEEK1.html
@@ -10,7 +10,7 @@
       <h3>I hop you like it here.</h3>
         <h4>I hop you like it here.</h4>
           <h5>I hop you like it here.</h5>
-            <h6>I hop you like it here.</h6>
+            <h6 style="border-style: solid;border-width: 1px;padding: 10px">I hop you like it here.</h6>
               <p style="color:blue;">This is my paragraph.</p>
               <p>This is my another paragraph.</p>
                 <b>Bold text</b><br>
